--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@azoom/az-icons": "^0.1.7",
-    "@azoom/primevue-theme-generator": "github:azoom-julio-quiezi/PrimeVueThemeGenerator",
+"@azoom/primevue-theme-generator": "https://github.com/azoom-julio-quiezi/PrimeVueThemeGenerator",
     "@primeuix/themes": "^1.2.1",
     "@primevue/nuxt-module": "^4.3.6",
     "nuxt": "^3.17.6",
